--- a/blogging-website/index.html
+++ b/blogging-website/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-adsense-account" content="ca-pub-1279837323199241">
     <title>Vistoraa</title>
+    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
